Quorum/Library/Tests/TypeChecker/Pass/ExpAssignIntegerNumber.quorum
class Main
    action Main
        integer int = 0
        int = cast(integer, 7.5)
        if int = 7
            output "passed"
        end
    end
end