Quorum/Library/Tests/TypeChecker/Fail/ExpAssignIntegerBooleanField.quorum
class Main
    integer int = 0
    action Main
        int = cast(integer, true)
    end
end
